# cargo-smart-release

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  build.rs  justfile
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  install.yml  rust-next.yml  zizmor.yml
src/: bat.rs  context.rs  traverse.rs  utils.rs  version.rs
src/changelog/: init.rs  merge.rs  parse.rs
src/changelog/section/: from_history.rs
src/cli/: main.rs  options.rs
src/command/: changelog.rs  mod.rs
src/command/release/: cargo.rs  git.rs  github.rs  gitlab.rs  manifest.rs  mod.rs
src/commit/: history.rs  message.rs
src/git/: history.rs  mod.rs
tests/: journey.sh
tests/changelog/: merge.rs  parse.rs
tests/changelog/write_and_parse/: mod.rs
tests/changelog/write_and_parse/snapshots/: integration__changelog__write_and_parse__issue_30_body_with_unordered_list_does_not_flatten.snap
tests/fixtures/changelog/parse/: releases-sorted-by-date.md
tests/snapshots/triple-depth-workspace/: a-dry-run-success-multi-crate-auto-bump-breaking-change-dependant-publish  b-dry-run-success-indirect-change  b-dry-run-success-indirect-change-transitive  c-dry-run-success-multi-crate-auto-bump-breaking-change  c-dry-run-success-multi-crate-auto-bump-minor-change  c-dry-run-success-multi-crate-auto-bump-no-change
